--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="Search">Поиск</string>
     <string name="brandname">Brandname</string>
     <string name="Reviews">Отзывы</string>
+    <string name="error">Внимание, ошибка!</string>
 </resources>
